--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
@@ -53,9 +54,14 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@types/bootstrap": "^5.1.9",
     "@types/lodash": "^4.14.179",
     "@types/react-bootstrap": "^0.32.29",
+    "@types/react-bootstrap-table-next": "^4.0.17",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24"
